# colour

./: .gitchangelog.rc  .package  .travis.yml  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  TODO.rst  XKCD_colour_definition.py  appveyor.yml  autogen.sh  colour.py  rgb.txt  setup.cfg  setup.py  test_colour.py
