[metadata]
name = colour
version = 0.1.2.dev201601281329
summary = converts and manipulates various color representation (HSL, RVB, web, X11, ...)
description-file =
    README.rst
    CHANGELOG.rst
    TODO.rst
requires-dist =

## sdist info
author = Valentin LAB
author_email = valentin.lab@kalysto.org
home_page = http://github.com/vaab/colour
classifier =
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers

[files]
modules = colour
#packages-root = src
#packages =
#    colour
extra_files =
    README.rst
    CHANGELOG.rst
    TODO.rst
    setup.py

# [entry_points]
# console_scripts =
#     cmd1 = colour.example:run

[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = colour
cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
