[metadata]
name = colour
version = 0.1.5
summary = converts and manipulates various color representation (HSL, RVB, web, X11, ...)
description-file =
    README.rst
    CHANGELOG.rst
    TODO.rst
license_file = LICENSE
requires-dist =

## sdist info
author = Valentin LAB
author_email = valentin.lab@kalysto.org
home_page = http://github.com/vaab/colour
license = BSD 3-Clause License
classifier =
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[files]
modules = colour
extra_files =
    README.rst
    CHANGELOG.rst
    TODO.rst
    setup.py


[backwards_compat]
## without this ``pip uninstall`` fails on recent version of setuptools
## (tested failing with setuptools 34.3.3, working with setuptools 9.1)
zip-safe = False


[bdist_wheel]
universal = 1


[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = colour
cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
